@@ -62,7 +62,7 @@ func TestFetchEventContents(t *testing.T) {
 	assert.EqualValues(t, "osd.0", nodeInfo["name"])
 	assert.EqualValues(t, "osd", nodeInfo["type"])
 	assert.EqualValues(t, 1, nodeInfo["primary_affinity"])
-	assert.EqualValues(t, 1, nodeInfo["exists"])
+	assert.EqualValues(t, true, nodeInfo["exists"])
 	assert.EqualValues(t, 0, nodeInfo["id"])
 	assert.EqualValues(t, 0, nodeInfo["type_id"])
 	assert.EqualValues(t, 0.048691, nodeInfo["crush_weight"])
@@ -76,7 +76,7 @@ func TestFetchEventContents(t *testing.T) {
 	assert.EqualValues(t, "osd.1", nodeInfo["name"])
 	assert.EqualValues(t, "osd", nodeInfo["type"])
 	assert.EqualValues(t, 1, nodeInfo["primary_affinity"])
-	assert.EqualValues(t, 1, nodeInfo["exists"])
+	assert.EqualValues(t, true, nodeInfo["exists"])
 	assert.EqualValues(t, 1, nodeInfo["id"])
 	assert.EqualValues(t, 0, nodeInfo["type_id"])
 	assert.EqualValues(t, 0.048691, nodeInfo["crush_weight"])
